--- a/package.json
+++ b/package.json
@@ -18,7 +18,16 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "setup": "npm-run-all build bin:setup",
+    "setup:clean": "npm-run-all prebuild build bin:setup:force",
+    "bin:example": "node dist/bin/example",
+    "bin:setup": "node dist/bin/setup",
+    "bin:setup:force": "node dist/bin/setup --force",
+    "db:help": "typeorm --help",
+    "db:sync": "typeorm schema:sync",
+    "db:drop": "typeorm schema:drop"
   },
   "dependencies": {
     "@nestjs/common": "^7.0.0",
@@ -29,8 +38,10 @@
     "@nestjs/typeorm": "^7.0.0",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.1",
+    "command-line-args": "^5.1.1",
     "dotenv": "^8.2.0",
     "nest-router": "^1.0.9",
+    "npm-run-all": "^4.1.5",
     "pg": "^7.18.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -44,7 +55,7 @@
     "@nestjs/testing": "^7.0.0",
     "@types/express": "^4.17.3",
     "@types/jest": "25.1.4",
-    "@types/node": "^13.9.1",
+    "@types/node": "^13.9.2",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
     "@typescript-eslint/parser": "^2.23.0",
@@ -56,7 +67,7 @@
     "supertest": "^4.0.2",
     "ts-jest": "25.2.1",
     "ts-loader": "^6.2.1",
-    "ts-node": "^8.6.2",
+    "ts-node": "^8.7.0",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^3.7.4"
   },
