Add migration commands

--- a/package.json
+++ b/package.json
@@ -26,7 +26,15 @@
     "bin:setup:force": "node dist/bin/setup --force",
     "db:schema:log": "./node_modules/.bin/ts-node ./node_modules/.bin/typeorm schema:log",
     "db:schema:sync": "./node_modules/.bin/ts-node ./node_modules/.bin/typeorm schema:sync",
-    "db:schema:drop": "./node_modules/.bin/ts-node ./node_modules/.bin/typeorm schema:drop"
+    "db:schema:drop": "./node_modules/.bin/ts-node ./node_modules/.bin/typeorm schema:drop",
+    "db:migration:create": "./node_modules/.bin/ts-node ./node_modules/.bin/typeorm migration:create",
+    "db:migration:generate": "./node_modules/.bin/ts-node ./node_modules/.bin/typeorm migration:generate",
+    "db:migration:show": "./node_modules/.bin/ts-node ./node_modules/.bin/typeorm migration:show",
+    "db:migration:run": "./node_modules/.bin/ts-node ./node_modules/.bin/typeorm migration:run",
+    "db:migration:revert": "./node_modules/.bin/ts-node ./node_modules/.bin/typeorm migration:revert",
+    "db:cache:clear": "./node_modules/.bin/ts-node ./node_modules/.bin/typeorm cache:clear",
+    "db:query": "./node_modules/.bin/ts-node ./node_modules/.bin/typeorm query",
+    "db:version": "./node_modules/.bin/ts-node ./node_modules/.bin/typeorm version"
   },
   "dependencies": {
     "@nestjs/common": "^7.0.0",
