--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "nest build",
+    "build":"npm-run-all prebuild build:only bin:setup:force",
+    "build:only": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -19,8 +20,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",    
-    "setup": "npm-run-all build bin:setup",
-    "setup:clean": "npm-run-all prebuild build bin:setup:force",
+    "setup": "npm-run-all build:only bin:setup",
+    "setup:clean": "npm-run-all prebuild build:only bin:setup:force",
     "bin:example": "node dist/bin/example",
     "bin:setup": "node dist/bin/setup",
     "bin:setup:force": "node dist/bin/setup --force",
