--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build":"npm-run-all prebuild build:only bin:setup:force",
+    "build": "npm-run-all prebuild build:only bin:setup:force",
     "build:only": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
@@ -19,7 +19,7 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",    
+    "test:e2e": "jest --config ./test/jest-e2e.json",
     "setup": "npm-run-all build:only bin:setup",
     "setup:clean": "npm-run-all prebuild build:only bin:setup:force",
     "bin:example": "node dist/bin/example",
@@ -55,7 +55,8 @@
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
     "swagger-ui-express": "^4.1.3",
-    "typeorm": "^0.2.24"
+    "typeorm": "^0.2.24",
+    "typeorm-seeding": "^1.4.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
@@ -94,7 +95,7 @@
     "testEnvironment": "node"
   },
   "engines": {
-    "node": "12.16.2",
+    "node": "10.20.1",
     "yarn": "1.22.4"
   }
 }
