--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "rxjs": "^6.5.4",
     "swagger-ui-express": "^4.1.3",
     "typeorm": "^0.2.24",
-    "typeorm-seeding": "^1.4.4"
+    "typeorm-seeding": "^1.4.4",
+    "wkhtmltopdf": "^0.3.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
