--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,2 @@
-NODE_ENV=local
-DATABASE_HOST=localhost
-DATABASE_PORT=5432
-DATABASE_USERNAME=postgres
-DATABASE_PASSWORD=123456
-DATABASE_NAME=example
+NODE_ENV=development
+DATABASE_URL=postgresql://username:password@localhost:5432/dbname
