--- a/package.json
+++ b/package.json
@@ -44,10 +44,12 @@
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/swagger": "^4.4.0",
     "@nestjs/typeorm": "^7.0.0",
+    "bcrypt": "^4.0.1",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.1",
     "command-line-args": "^5.1.1",
     "dotenv": "^8.2.0",
+    "moment-timezone": "^0.5.28",
     "nest-router": "^1.0.9",
     "npm-run-all": "^4.1.5",
     "pg": "^7.18.2",
