--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
     "bin:example": "node dist/bin/example",
     "bin:setup": "node dist/bin/setup",
     "bin:setup:force": "node dist/bin/setup --force",
-    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/.bin/typeorm"   
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/.bin/typeorm"
   },
   "dependencies": {
     "@nestjs/common": "^7.0.0",
     "@nestjs/config": "^0.4.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
-    "@nestjs/swagger": "^4.4.0",
+    "@nestjs/swagger": "^4.5.3",
     "@nestjs/typeorm": "^7.0.0",
     "bcrypt": "^4.0.1",
     "class-transformer": "^0.2.3",
@@ -41,6 +41,7 @@
     "dotenv": "^8.2.0",
     "moment-timezone": "^0.5.28",
     "nest-router": "^1.0.9",
+    "nestjs-typeorm-paginate": "^2.0.3",
     "npm-run-all": "^4.1.5",
     "pg": "^7.18.2",
     "reflect-metadata": "^0.1.13",
